# MAMAP

./: CMakeLists.txt  LICENSE  README.md
cmake/: InstallCatch2.cmake  MAMAPInstall.cmake  mamapConfig.cmake
include/mamap/: CMakeLists.txt  argumentparser.hpp  mamap_config.hpp.in  string_support.hpp
include/mamap/arguments/: argumentfile.hpp  argumentnumerical.hpp  argumentobject.hpp  argumentstring.hpp  argumentswitch.hpp  argumenttypes.hpp
include/mamap/arguments/properties/: propertyfileext.hpp  propertyobject.hpp  propertyoptions.hpp  propertysisterfile.hpp  propertystring.hpp  propertystringchoice.hpp  propertyswitch.hpp
src/: CMakeLists.txt
src/libmamap/: CMakeLists.txt  argumentparser.cpp  argumentparser.hpp  mamap_config.hpp  mamap_config.hpp.in  string_support.cpp
src/libmamap/arguments/: argumentfile.cpp  argumentnumerical.cpp  argumentnumerical.hpp  argumentobject.cpp  argumentobject.hpp  argumentstring.cpp  argumentswitch.cpp  argumenttypes.cpp
src/libmamap/arguments/properties/: .propertyobject.hpp.swp  .propertystringchoice.cpp.swp  propertyfileexist.cpp  propertyfileexist.hpp  propertyfileext.cpp  propertyfileext.hpp  propertynumeric.cpp  propertynumeric.hpp  propertyobject.cpp  propertyobject.hpp  propertyoptions.cpp  propertysisterfile.cpp  propertysisterfile.hpp  propertystring.cpp  propertystring.hpp  propertystringchoice.cpp  propertystringchoice.hpp  propertyswitch.cpp  propertyswitch.hpp  propertytypes.cpp  propertytypes.hpp
src/tests/: .test_propertystringchoice.cpp.swo  .test_propertystringchoice.cpp.swp  CMakeLists.txt  test_argumentfile.cpp  test_argumentnumerical.cpp  test_argumentparser.cpp  test_argumentstring.cpp  test_propertyfileexist.cpp  test_propertyfileext.cpp  test_propertynumerical.cpp  test_propertysisterfile.cpp  test_propertystring.cpp  test_propertystringchoice.cpp  test_propertyswitch.cpp  test_string_support.cpp
